--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>executionEngine.DriverScript</td>
+<td>test.DriverScript</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -13,11 +13,6 @@
 <td>&nbsp;</td>
 <td>JiraId_1200</td>
 <td>Validation of hyperlink </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>Jira_1203</td>
-<td>Validation of checkbox </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -32,7 +27,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>Jira</td>
-<td>Validation of successful launch of app </td>
+<td>Validation of title </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
