--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,6 +1,5 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Validation of checkbox</td><td>DriverScript.Jira_1203()[pri:5, instance:executionEngine.DriverScript@670b40af]<br/></td></tr>
-<tr><td>Validation of color</td><td>DriverScript.JiraId_1202()[pri:4, instance:executionEngine.DriverScript@670b40af]<br/></td></tr>
-<tr><td>Validation of hyperlink</td><td>DriverScript.JiraId_1200()[pri:2, instance:executionEngine.DriverScript@670b40af]<br/>DriverScript.JiraId_1201()[pri:3, instance:executionEngine.DriverScript@670b40af]<br/></td></tr>
-<tr><td>Validation of successful launch of app</td><td>DriverScript.Jira()[pri:1, instance:executionEngine.DriverScript@670b40af]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Validation of color</td><td>DriverScript.JiraId_1202()[pri:4, instance:test.DriverScript@371a67ec]<br/></td></tr>
+<tr><td>Validation of hyperlink</td><td>DriverScript.JiraId_1200()[pri:2, instance:test.DriverScript@371a67ec]<br/>DriverScript.JiraId_1201()[pri:3, instance:test.DriverScript@371a67ec]<br/></td></tr>
+<tr><td>Validation of title</td><td>DriverScript.Jira()[pri:1, instance:test.DriverScript@371a67ec]<br/></td></tr>
 </table>
