--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d0c87b">  <td>19/02/21 16:58:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.Jira()[pri:1, instance:executionEngine.DriverScript@670b40af]">Jira</td> 
-  <td>main@246550802</td>   <td></td> </tr>
-<tr bgcolor="d0c87b">  <td>19/02/21 16:58:33</td>   <td>16830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.JiraId_1200()[pri:2, instance:executionEngine.DriverScript@670b40af]">JiraId_1200</td> 
-  <td>main@246550802</td>   <td></td> </tr>
-<tr bgcolor="d0c87b">  <td>19/02/21 16:58:52</td>   <td>35817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.JiraId_1201()[pri:3, instance:executionEngine.DriverScript@670b40af]">JiraId_1201</td> 
-  <td>main@246550802</td>   <td></td> </tr>
-<tr bgcolor="d0c87b">  <td>19/02/21 16:59:16</td>   <td>60397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.JiraId_1202()[pri:4, instance:executionEngine.DriverScript@670b40af]">JiraId_1202</td> 
-  <td>main@246550802</td>   <td></td> </tr>
-<tr bgcolor="d0c87b">  <td>19/02/21 16:59:19</td>   <td>63326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.Jira_1203()[pri:5, instance:executionEngine.DriverScript@670b40af]">Jira_1203</td> 
-  <td>main@246550802</td>   <td></td> </tr>
+<tr bgcolor="d0c87b">  <td>19/03/10 18:10:31</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;DriverScript.pre_requisute()[pri:0, instance:test.DriverScript@371a67ec]">&gt;&gt;pre_requisute</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@315138752</td>   <td></td> </tr>
+<tr bgcolor="d0c87b">  <td>19/03/10 18:11:33</td>   <td>62021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.Jira()[pri:1, instance:test.DriverScript@371a67ec]">Jira</td> 
+  <td>main@315138752</td>   <td></td> </tr>
 </table>
