Now it is Hybrid framework

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,16 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">7</td><td class="num">0</td><td class="num">0</td><td class="num">97,406</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">45,173</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="7">test.DriverScript</td><td><a href="#m0">Jira</a></td><td rowspan="1">1557028074368</td><td rowspan="1">19226</td></tr><tr class="passedeven"><td><a href="#m1">JiraId_1200</a></td><td rowspan="1">1557028093677</td><td rowspan="1">7390</td></tr><tr class="passedeven"><td><a href="#m2">JiraId_1201</a></td><td rowspan="1">1557028101112</td><td rowspan="1">7775</td></tr><tr class="passedeven"><td><a href="#m3">JiraId_1202</a></td><td rowspan="1">1557028108893</td><td rowspan="1">7000</td></tr><tr class="passedeven"><td><a href="#m4">Jira_1203</a></td><td rowspan="1">1557028115898</td><td rowspan="1">4158</td></tr><tr class="passedeven"><td><a href="#m5">Jira_1204</a></td><td rowspan="1">1557028124059</td><td rowspan="1">3337</td></tr><tr class="passedeven"><td><a href="#m6">Jira_1205</a></td><td rowspan="1">1557028120060</td><td rowspan="1">3986</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">test.DriverScript</td><td><a href="#m0">JiraId_1206</a></td><td rowspan="1">1558518257514</td><td rowspan="1">26109</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">test.DriverScript#Jira</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">test.DriverScript#JiraId_1200</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">test.DriverScript#JiraId_1201</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">test.DriverScript#JiraId_1202</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">test.DriverScript#Jira_1203</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">test.DriverScript#Jira_1204</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">test.DriverScript#Jira_1205</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">test.DriverScript#JiraId_1206</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
