--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Abha Kumari\AppData\Local\Temp\testng-eclipse--1251943727\testng-customsuite.xml</span>
+                    <span>C:\Users\Abha Kumari\AppData\Local\Temp\testng-eclipse--443208425\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -59,7 +59,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="group-Default_suite">
-                    <span>6 groups</span>
+                    <span>1 group</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">7 methods,   7 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,37 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="Jira">Jira</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="JiraId_1200">JiraId_1200</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="JiraId_1201">JiraId_1201</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="JiraId_1202">JiraId_1202</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="Jira_1203">Jira_1203</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="Jira_1204">Jira_1204</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="Jira_1205">Jira_1205</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="JiraId_1206">JiraId_1206</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -155,51 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Jira">
-                  </a> <!-- Jira -->
-                  <span class="method-name">Jira</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="JiraId_1200">
-                  </a> <!-- JiraId_1200 -->
-                  <span class="method-name">JiraId_1200</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="JiraId_1201">
-                  </a> <!-- JiraId_1201 -->
-                  <span class="method-name">JiraId_1201</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="JiraId_1202">
-                  </a> <!-- JiraId_1202 -->
-                  <span class="method-name">JiraId_1202</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="Jira_1203">
-                  </a> <!-- Jira_1203 -->
-                  <span class="method-name">Jira_1203</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="Jira_1204">
-                  </a> <!-- Jira_1204 -->
-                  <span class="method-name">Jira_1204</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="Jira_1205">
-                  </a> <!-- Jira_1205 -->
-                  <span class="method-name">Jira_1205</span>
+                  <a name="JiraId_1206">
+                  </a> <!-- JiraId_1206 -->
+                  <span class="method-name">JiraId_1206</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -207,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Abha Kumari\AppData\Local\Temp\testng-eclipse--1251943727\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Abha Kumari\AppData\Local\Temp\testng-eclipse--443208425\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -241,54 +169,10 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
-              <span class="test-group-name">Validation of Date picker</span>
+              <span class="test-group-name">Form Submission</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">Jira_1205</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
-            <div class="test-group">
-              <span class="test-group-name">Validation of Right Click ops</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">Jira_1204</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
-            <div class="test-group">
-              <span class="test-group-name">Validation of checkbox</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">Jira_1203</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
-            <div class="test-group">
-              <span class="test-group-name">Validation of color</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">JiraId_1202</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
-            <div class="test-group">
-              <span class="test-group-name">Validation of hyperlink</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">JiraId_1200</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">JiraId_1201</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
-            <div class="test-group">
-              <span class="test-group-name">Validation of title</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">Jira</span>
+                <span class="method-in-group-name">JiraId_1206</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -308,40 +192,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(7);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Jira')
+data.setCell(0, 1, 'JiraId_1206')
 data.setCell(0, 2, 'test.DriverScript')
-data.setCell(0, 3, 19226);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'JiraId_1201')
-data.setCell(1, 2, 'test.DriverScript')
-data.setCell(1, 3, 7775);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'JiraId_1200')
-data.setCell(2, 2, 'test.DriverScript')
-data.setCell(2, 3, 7390);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'JiraId_1202')
-data.setCell(3, 2, 'test.DriverScript')
-data.setCell(3, 3, 7000);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'Jira_1203')
-data.setCell(4, 2, 'test.DriverScript')
-data.setCell(4, 3, 4158);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'Jira_1205')
-data.setCell(5, 2, 'test.DriverScript')
-data.setCell(5, 3, 3986);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'Jira_1204')
-data.setCell(6, 2, 'test.DriverScript')
-data.setCell(6, 3, 3337);
+data.setCell(0, 3, 26109);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 52 seconds</span>
+              <span class="suite-total-time">Total running time: 26 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -373,33 +233,13 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">Jira</span>
-                <span class="method-start">44351 ms</span>
+                <span class="method-name">JiraId_1206</span>
+                <span class="method-start">8151 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">JiraId_1200</span>
-                <span class="method-start">63660 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">JiraId_1201</span>
-                <span class="method-start">71095 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">JiraId_1202</span>
-                <span class="method-start">78876 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">Jira_1203</span>
-                <span class="method-start">85881 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">Jira_1205</span>
-                <span class="method-start">90043 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">Jira_1204</span>
-                <span class="method-start">94042 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">closeTheSession</span>
+                <span class="method-start">34284 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
