--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,38 +11,8 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>JiraId_1200</td>
-<td>Validation of hyperlink </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>Jira_1203</td>
-<td>Validation of checkbox </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>Jira_1205</td>
-<td>Validation of Date picker </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>Jira_1204</td>
-<td>Validation of Right Click ops </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>JiraId_1202</td>
-<td>Validation of color </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>JiraId_1201</td>
-<td>Validation of hyperlink </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>Jira</td>
-<td>Validation of title </td>
+<td>JiraId_1206</td>
+<td>Form Submission </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
