--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,8 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Validation of Date picker</td><td>DriverScript.Jira_1205()[pri:6, instance:test.DriverScript@7b69c6ba]<br/></td></tr>
-<tr><td>Validation of Right Click ops</td><td>DriverScript.Jira_1204()[pri:7, instance:test.DriverScript@7b69c6ba]<br/></td></tr>
-<tr><td>Validation of checkbox</td><td>DriverScript.Jira_1203()[pri:5, instance:test.DriverScript@7b69c6ba]<br/></td></tr>
-<tr><td>Validation of color</td><td>DriverScript.JiraId_1202()[pri:4, instance:test.DriverScript@7b69c6ba]<br/></td></tr>
-<tr><td>Validation of hyperlink</td><td>DriverScript.JiraId_1200()[pri:2, instance:test.DriverScript@7b69c6ba]<br/>DriverScript.JiraId_1201()[pri:3, instance:test.DriverScript@7b69c6ba]<br/></td></tr>
-<tr><td>Validation of title</td><td>DriverScript.Jira()[pri:1, instance:test.DriverScript@7b69c6ba]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Form Submission</td><td>DriverScript.JiraId_1206()[pri:7, instance:test.DriverScript@46daef40]<br/></td></tr>
 </table>
