--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d0c87b">  <td>19/05/05 09:17:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.Jira()[pri:1, instance:test.DriverScript@7b69c6ba]">Jira</td> 
-  <td>main@586084331</td>   <td></td> </tr>
-<tr bgcolor="d0c87b">  <td>19/05/05 09:18:13</td>   <td>19309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.JiraId_1200()[pri:2, instance:test.DriverScript@7b69c6ba]">JiraId_1200</td> 
-  <td>main@586084331</td>   <td></td> </tr>
-<tr bgcolor="d0c87b">  <td>19/05/05 09:18:21</td>   <td>26744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.JiraId_1201()[pri:3, instance:test.DriverScript@7b69c6ba]">JiraId_1201</td> 
-  <td>main@586084331</td>   <td></td> </tr>
-<tr bgcolor="d0c87b">  <td>19/05/05 09:18:28</td>   <td>34525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.JiraId_1202()[pri:4, instance:test.DriverScript@7b69c6ba]">JiraId_1202</td> 
-  <td>main@586084331</td>   <td></td> </tr>
-<tr bgcolor="d0c87b">  <td>19/05/05 09:18:35</td>   <td>41530</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.Jira_1203()[pri:5, instance:test.DriverScript@7b69c6ba]">Jira_1203</td> 
-  <td>main@586084331</td>   <td></td> </tr>
-<tr bgcolor="d0c87b">  <td>19/05/05 09:18:44</td>   <td>49691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.Jira_1204()[pri:7, instance:test.DriverScript@7b69c6ba]">Jira_1204</td> 
-  <td>main@586084331</td>   <td></td> </tr>
-<tr bgcolor="d0c87b">  <td>19/05/05 09:18:40</td>   <td>45692</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.Jira_1205()[pri:6, instance:test.DriverScript@7b69c6ba]">Jira_1205</td> 
-  <td>main@586084331</td>   <td></td> </tr>
-<tr bgcolor="d0c87b">  <td>19/05/05 09:17:10</td>   <td>-44328</td> <td>&nbsp;</td><td title="&gt;&gt;DriverScript.pre_requisute()[pri:0, instance:test.DriverScript@7b69c6ba]">&gt;&gt;pre_requisute</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@586084331</td>   <td></td> </tr>
+<tr bgcolor="d0c87b">  <td>19/05/22 15:14:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.JiraId_1206()[pri:7, instance:test.DriverScript@46daef40]">JiraId_1206</td> 
+  <td>main@399534175</td>   <td></td> </tr>
+<tr bgcolor="d0c87b">  <td>19/05/22 15:14:43</td>   <td>26133</td> <td>&nbsp;</td><td title="&lt;&lt;DriverScript.closeTheSession()[pri:0, instance:test.DriverScript@46daef40]">&lt;&lt;closeTheSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@399534175</td>   <td></td> </tr>
+<tr bgcolor="d0c87b">  <td>19/05/22 15:14:09</td>   <td>-8135</td> <td>&nbsp;</td><td title="&gt;&gt;DriverScript.pre_requisute()[pri:0, instance:test.DriverScript@46daef40]">&gt;&gt;pre_requisute</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@399534175</td>   <td></td> </tr>
 </table>
