Covered one new functionality <<Web based pop-ups>> JiraId_1207

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,8 +11,8 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>JiraId_1206</td>
-<td>Form Submission </td>
+<td>JiraId_1207</td>
+<td>Web based pop-ups </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
