--- a/test-output/old/TestNg_Basics_Config/groups.html
+++ b/test-output/old/TestNg_Basics_Config/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Form Submission</td><td>DriverScript.JiraId_1206()[pri:7, instance:test.DriverScript@46daef40]<br/></td></tr>
+<tr><td>Validation of Date picker</td><td>DriverScript.Jira_1205()[pri:6, instance:test.DriverScript@46daef40]<br/></td></tr>
+</table>
