--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Form Submission</td><td>DriverScript.JiraId_1206()[pri:7, instance:test.DriverScript@46daef40]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Web based pop-ups</td><td>DriverScript.JiraId_1207()[pri:8, instance:test.DriverScript@23faf8f2]<br/></td></tr>
 </table>
