--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d0c87b">  <td>19/05/22 15:14:09</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;DriverScript.pre_requisute()[pri:0, instance:test.DriverScript@46daef40]">&gt;&gt;pre_requisute</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@399534175</td>   <td></td> </tr>
-<tr bgcolor="d0c87b">  <td>19/05/22 15:14:17</td>   <td>8135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.JiraId_1206()[pri:7, instance:test.DriverScript@46daef40]">JiraId_1206</td> 
-  <td>main@399534175</td>   <td></td> </tr>
-<tr bgcolor="d0c87b">  <td>19/05/22 15:14:43</td>   <td>34268</td> <td>&nbsp;</td><td title="&lt;&lt;DriverScript.closeTheSession()[pri:0, instance:test.DriverScript@46daef40]">&lt;&lt;closeTheSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@399534175</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>20/01/11 14:05:26</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;DriverScript.pre_requisute()[pri:0, instance:test.DriverScript@23faf8f2]">&gt;&gt;pre_requisute</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>20/01/11 14:05:56</td>   <td>30166</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.JiraId_1207()[pri:8, instance:test.DriverScript@23faf8f2]">JiraId_1207</td> 
+  <td>main@1373810119</td>   <td></td> </tr>
+<tr bgcolor="80b678">  <td>20/01/11 14:06:35</td>   <td>69471</td> <td>&nbsp;</td><td title="&lt;&lt;DriverScript.closeTheSession()[pri:0, instance:test.DriverScript@23faf8f2]">&lt;&lt;closeTheSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1373810119</td>   <td></td> </tr>
 </table>
