--- a/test-output/old/TestNg_Basics_Config/classes.html
+++ b/test-output/old/TestNg_Basics_Config/classes.html
@@ -3,4 +3,32 @@
 <th>Class name</th>
 <th>Method name</th>
 <th>Groups</th>
-</tr></table>
+</tr><tr>
+<td>test.DriverScript</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Jira_1205</td>
+<td>Validation of Date picker </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>JiraId_1206</td>
+<td>Form Submission </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+</table>
