stabilishing TDD-TestNG project

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,8 +11,13 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>JiraId_1207</td>
-<td>Web based pop-ups </td>
+<td>JiraId_1200</td>
+<td>Validation of hyperlink </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Jira</td>
+<td>Validation of title </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
