--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Web based pop-ups</td><td>DriverScript.JiraId_1207()[pri:8, instance:test.DriverScript@79be0360]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Validation of hyperlink</td><td>DriverScript.JiraId_1200()[pri:2, instance:test.DriverScript@57855c9a]<br/></td></tr>
+<tr><td>Validation of title</td><td>DriverScript.Jira()[pri:1, instance:test.DriverScript@57855c9a]<br/></td></tr>
 </table>
