--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bbfa64">  <td>20/01/14 09:45:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.JiraId_1207()[pri:8, instance:test.DriverScript@79be0360]">JiraId_1207</td> 
-  <td>main@811587677</td>   <td></td> </tr>
-<tr bgcolor="bbfa64">  <td>20/01/14 09:46:43</td>   <td>44021</td> <td>&nbsp;</td><td title="&lt;&lt;DriverScript.closeTheSession()[pri:0, instance:test.DriverScript@79be0360]">&lt;&lt;closeTheSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@811587677</td>   <td></td> </tr>
-<tr bgcolor="bbfa64">  <td>20/01/14 09:45:24</td>   <td>-35023</td> <td>&nbsp;</td><td title="&gt;&gt;DriverScript.pre_requisute()[pri:0, instance:test.DriverScript@79be0360]">&gt;&gt;pre_requisute</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@811587677</td>   <td></td> </tr>
+<tr bgcolor="bbfa64">  <td>20/02/26 13:13:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.Jira()[pri:1, instance:test.DriverScript@57855c9a]">Jira</td> 
+  <td>main@2048834776</td>   <td></td> </tr>
+<tr bgcolor="bbfa64">  <td>20/02/26 13:13:48</td>   <td>6453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverScript.JiraId_1200()[pri:2, instance:test.DriverScript@57855c9a]">JiraId_1200</td> 
+  <td>main@2048834776</td>   <td></td> </tr>
+<tr bgcolor="bbfa64">  <td>20/02/26 13:13:53</td>   <td>11417</td> <td>&nbsp;</td><td title="&lt;&lt;DriverScript.closeTheSession()[pri:0, instance:test.DriverScript@57855c9a]">&lt;&lt;closeTheSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2048834776</td>   <td></td> </tr>
+<tr bgcolor="bbfa64">  <td>20/02/26 13:13:28</td>   <td>-13440</td> <td>&nbsp;</td><td title="&gt;&gt;DriverScript.pre_requisute()[pri:0, instance:test.DriverScript@57855c9a]">&gt;&gt;pre_requisute</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2048834776</td>   <td></td> </tr>
 </table>
