--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Abha Kumari\AppData\Local\Temp\testng-eclipse--243702293\testng-customsuite.xml</span>
+                    <span>C:\Users\Abha Kumari\AppData\Local\Temp\testng-eclipse-758052028\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -59,7 +59,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="group-Default_suite">
-                    <span>1 group</span>
+                    <span>2 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="JiraId_1207">JiraId_1207</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="Jira">Jira</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test.DriverScript" hash-for-method="JiraId_1200">JiraId_1200</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +130,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="JiraId_1207">
-                  </a> <!-- JiraId_1207 -->
-                  <span class="method-name">JiraId_1207</span>
+                  <a name="Jira">
+                  </a> <!-- Jira -->
+                  <span class="method-name">Jira</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="JiraId_1200">
+                  </a> <!-- JiraId_1200 -->
+                  <span class="method-name">JiraId_1200</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Abha Kumari\AppData\Local\Temp\testng-eclipse--243702293\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Abha Kumari\AppData\Local\Temp\testng-eclipse-758052028\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -169,10 +181,18 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
-              <span class="test-group-name">Web based pop-ups</span>
+              <span class="test-group-name">Validation of hyperlink</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">JiraId_1207</span>
+                <span class="method-in-group-name">JiraId_1200</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
+              <span class="test-group-name">Validation of title</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">Jira</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -192,16 +212,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'JiraId_1207')
+data.setCell(0, 1, 'Jira')
 data.setCell(0, 2, 'test.DriverScript')
-data.setCell(0, 3, 43765);
+data.setCell(0, 3, 6409);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'JiraId_1200')
+data.setCell(1, 2, 'test.DriverScript')
+data.setCell(1, 3, 4948);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 43 seconds</span>
+              <span class="suite-total-time">Total running time: 11 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -233,12 +257,16 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">JiraId_1207</span>
-                <span class="method-start">35132 ms</span>
+                <span class="method-name">Jira</span>
+                <span class="method-start">13492 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">JiraId_1200</span>
+                <span class="method-start">19945 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">closeTheSession</span>
-                <span class="method-start">79153 ms</span>
+                <span class="method-start">24909 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
